--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.6.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'war'
+//	id 'war'
 }
 
 group = 'com.crud'
@@ -13,9 +13,9 @@ repositories {
 	mavenCentral()
 }
 
-jar {
-	enabled = false
-}
+//jar {
+//	enabled = false
+//}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -35,7 +35,7 @@ dependencies {
 	implementation('io.springfox:springfox-swagger2:2.9.2')
 	implementation('io.springfox:springfox-swagger-ui:2.9.2')
 
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 }
 
