--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ repositories {
 	mavenCentral()
 }
 
-//jar {
-//	enabled = false
-//}
+jar {
+	enabled = false
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
