--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-
-
+	testImplementation 'com.google.code.gson:gson'
 }
 
 test {
