--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.3'
-	//implementation 'io.springfox:springdox-swagger2:2.9.2'
-	//implementation 'io.springfox:springdox-swagger-ui:2.9.2'
+	//implementation 'org.springframework.boot:spring-boot-starter-actuator:2.6.3'
+	implementation('io.springfox:springfox-swagger2:2.9.2')
+	implementation('io.springfox:springfox-swagger-ui:2.9.2')
 
 	runtimeOnly 'mysql:mysql-connector-java'
 	runtimeOnly 'org.postgresql:postgresql:42.2.24'
