Email template done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+admin.name=Kodila User
 admin.mail=silwiaa@gmail.com
 
 #management.endpoints.web.exposure.include=*
@@ -34,8 +35,8 @@ admin.mail=silwiaa@gmail.com
 #info.app.administrator.email=john.doe@test.com
 #info.app.administrator.adress.street=Super Cool Street
 #info.app.administrator.adress.number=42
-#info.company.name=TaskCrudAppCreator
-#info.company.goal=Our goal is to make the world a better place!
-#info.company.email=task@crud.com
-#info.company.phone=744489230
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=task@crud.com
+info.company.phone=744489230
 
