--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -14,7 +14,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=silwiaa@gmail.com
+spring.mail.username=s.krzymowska@gmail.com
 spring.mail.password=p0ppersik
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
